--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ padding: 100px 0;
 	text-align: center;
 }
 
-gcse{
+gcse:search{
 border: 0!important;
 	border-radius: 30px !important;
 	margin:2px;
